[Akshay] ADD : Updated Swagger Ui for Search suggestions and Implemented its test cases
